// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SIWESignInfo renders correctly for SIWE signature request 1`] = `
<div>
  <div
    class="flex-col flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <button
      aria-label="copy-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
      style="cursor: pointer; position: absolute; right: 32px; top: 2px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/copy.svg');"
      />
    </button>
    <button
      aria-label="collapse-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
      data-testid="sectionCollapseButton"
      style="cursor: pointer; position: absolute; right: 8px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/collapse.svg');"
      />
    </button>
    <div
      class="flex-row items-start justify-start pr-12 flex text-alternative"
      style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
    >
      <div
        class="items-center flex"
        style="flex-shrink: 0;"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
        >
          Message
        </p>
      </div>
    </div>
    <div
      class="mm-box siwe-sign__message-rows mm-box--width-full"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        I accept the MetaMask Terms of Service: https://community.metamask.io/tos
      </p>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              URL
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            https://metamask.github.io
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Network
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            Ethereum
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Account
            </p>
          </div>
        </div>
        <div
          class="flex-row items-center flex"
        >
          <div
            class="mm-box overflow-hidden mm-box--display-flex mm-box--flex-direction-column"
          >
            <div
              class="name name__clickable name__missing"
            >
              <span
                class="mm-box name__icon mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/question.svg');"
              />
              <p
                class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
              >
                0x935e7...05477
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Version
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Chain ID
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Nonce
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            32891757
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Issued
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            30 September 2021, 16:25
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Request ID
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            some_id
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SIWESignInfo renders correctly for SIWE signature request with resources 1`] = `
<div>
  <div
    class="flex-col flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
    style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
  >
    <button
      aria-label="copy-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
      style="cursor: pointer; position: absolute; right: 32px; top: 2px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/copy.svg');"
      />
    </button>
    <button
      aria-label="collapse-button"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
      data-testid="sectionCollapseButton"
      style="cursor: pointer; position: absolute; right: 8px;"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/collapse.svg');"
      />
    </button>
    <div
      class="flex-row items-start justify-start pr-12 flex text-alternative"
      style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
    >
      <div
        class="items-center flex"
        style="flex-shrink: 0;"
      >
        <p
          class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
        >
          Message
        </p>
      </div>
    </div>
    <div
      class="mm-box siwe-sign__message-rows mm-box--width-full"
    >
      <p
        class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        style="white-space: pre-wrap;"
      >
        I accept the MetaMask Terms of Service: https://community.metamask.io/tos
      </p>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              URL
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            https://metamask.github.io
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Network
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            Ethereum
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Account
            </p>
          </div>
        </div>
        <div
          class="flex-row items-center flex"
        >
          <div
            class="mm-box overflow-hidden mm-box--display-flex mm-box--flex-direction-column"
          >
            <div
              class="name name__clickable name__missing"
            >
              <span
                class="mm-box name__icon mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/question.svg');"
              />
              <p
                class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
              >
                0x935E7...05477
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Version
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Chain ID
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            1
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Nonce
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            32891757
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Issued
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            30 September 2021, 16:25
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Request ID
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            some_id
          </p>
        </div>
      </div>
      <div
        class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
      >
        <div
          class="flex-row items-start justify-start flex text-alternative"
          style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
        >
          <div
            class="items-center flex"
            style="flex-shrink: 0;"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Resources
            </p>
          </div>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            ipfs://Qme7ss3ARVgxv6rXqVPiikMJ8u2NLgmgszg13pYrDKEoiu
          </p>
        </div>
        <div
          class="flex-wrap gap-2 items-center flex min-w-0"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
            style="white-space: pre-wrap;"
          >
            https://example.com/my-web2-claim.json
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
